<resources>
    <string name="app_name">10000know</string>
    <string name="action_settings">Settings</string>
    <string name="jing_girl">京妮</string>
    <string name="iask_page">爱问</string>
    <string name="question_content_not_empty">输入的问题不能为空</string>
    <string name="json_parse_error">数据解析异常</string>
    <string name="data_error">网络异常或数据不正确</string>
    <string name="voice_start">开始</string>
    <string name="helper">助手</string>
    <string name="me">我</string>
    <string name="first_hello">你好，主人！</string>
    <string name="master">主人</string>
    <string name="joke">笑话</string>
    <string name="navigation_page">导航页</string>
    <string name="mm">美女</string>
    <string name="sister">妹子</string>
    <string name="hello">你好</string>
    <string name="girl_1">妞</string>
    <string name="tang_poetry">唐诗</string>
    <string name="unknow_answer">这个问题太难了，我不知道该怎么回答!</string>
    <string name="temp_location">地图数据暂时模拟</string>
    <string name="business_hall ">营业厅</string>
    <string name="business_hall_route">营业厅路线图</string>
    <string name="net_unavailable">网络连接不可用，请检查网络设置</string>
    <string name="net_not_good">亲，网络不给力啊，检查一下吧？</string>
    <string name="text_send">发送</string>
    <string name="download_tingting">您还没有安装听听中心，请先下载并安装！</string>
    <string name="plz_login">请登录</string>
    <string name="plz_login_desc">您还没有登陆，登陆后才能回答问题，现在登陆吗 ?</string>
    <string name="to_tingting_setting">点击设置</string>
    <string name="set_tingting_title">设置听听播报</string>
    <string name="set_tingting">set_tingting</string>
    <string name="plz_login_key">setting_login</string>
    <string name="plz_login_more">登陆后功能更多</string>
    <string name="plz_login_2">点击确定后，您将在新页面登录授权\"10000知道\"，授权成功后您将享受到更多的功能。请放心，我们绝对不会收集您的任何信息，授权仅用于为您提供更丰富的服务。</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_next_ask">下次再说</string>
    <string name="input_question"> 请输入问题</string>
    <string name="login_authorization_success">登录授权成功</string>
    <string name="login_authorization_fail">登录授权失败</string>
    <string name="already_logined">已登录</string>
    <string name="logged_out">退出登录</string>
    <string name="logged_out_ing">正在退出登录，请稍后</string>
    <string name="logged_success">退出成功</string>
    <string name="more_function">已经登录，您将会享受到更多服务</string>
    <string name="download_tingting_center">下载听听中心</string>
    <string name="download_google_voice_search">下载Google语音搜索</string>
    <string name="download_tingting_alert_msg">下载听听中心离线播报，可以离线播报语音，更省流量，建议您下载使用。</string>
    <string name="download_google_voice_search_alert_msg">确定下载Google语音搜索？</string>
    <string name="show_nearby">显示附近的营业厅</string>
    <string name="nearby_business_hall">您附近的营业厅</string>
    <string name="nearby_business_hall_02">离您最近的营业厅是%1$s</string>
    <string name="telephone">电话：%1$s</string>
    <string name="back_text">返回</string>
    <string name="route_distance_time">全程约%1$s公里</string>
    <string name="driving_type">驾驶</string>
    <string name="walking_type">步行</string>
    <string name="transit_type">公交</string>
    <string name="already_find_answer">已经找到答案，请查看。</string>
    <string name="plz_see_answer">已经找到，请查看。</string>
    <string name="plz_see_message">已经找到最新消息，请查看。</string>
    <string name="plz_see_discount">已经找到最新活动，请查看。</string>
    <string name="plz_see_mobile_answer">已经找到手机，请查看。</string>
    <string name="plz_see_app_answer">已经找到应用，请查看。</string>
    <string name="plz_see_package_answer">已经找到套餐，请查看。</string>
    <string name="plz_see_roaming_answer">已经找到%1$s的漫游资费，%2$s 请看。</string>
    <string name="package_month_pay_see">%1$s元/月</string>
    <string name="minutes">%1$s 分钟</string>
    <string name="rmb_sign">￥%1$s</string>
    <string name="no_any_data">没有找到任何数据</string>
    <string name="faq_update_time">更新时间:%1$s</string>
    <string name="update_log">更新记录</string>
    <string name="faq_faq">FAQ</string>
    <string name="mobile_mobile">手机</string>
    <string name="mobile_detail">手机详情</string>
    <string name="message_dtail">消息详情</string>
    <string name="discount_dtail">活动详情</string>
    <string name="jm_pack">积木套餐</string>
    <string name="discount">活动</string>
    <string name="business_hall_detail">营业厅详情</string>
    <string name="valid_time">有效时间：%1$s</string>
    <string name="end_time">结束时间</string>
    <string name="end_time_to"> 至 </string>
    <string name="from_to">来自：%1$s</string>
    <string name="packge_package">更多套餐</string>
    <string name="packge_detail">套餐详情</string>
    <string name="packge_name">套餐</string>
    <string name="iask_iask">爱问</string>
    <string name="my_business_hall">自有营业厅</string>
    <string name="cooperation_business_hall">合作营业厅</string>
    <string name="unknow">未知</string>
    <string name="no_driving_result">抱歉，未找到驾车路线</string>
    <string name="no_transit_result">抱歉，未找到公交路线</string>
    <string name="no_walking_result">抱歉，未找到步行路线</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="mb">MB</string>
    <string name="click_this_to_say">点此说话</string>
    <string name="dialog_alert">提示</string>
    <string name="confirm_exit">亲，确定退出吗？</string>
    <string name="content_is_null">%1$s，您还没有输入问题哦。</string>
    <string name="net_error_plz">您的网络出错了，请检查。</string>
    <string name="baidu_key_error">百度地图AppKey授权错误！</string>
    <string name="myapp">应用</string>
    <string name="cellphone">手机</string>
    <string name="business_hall_not_tel">尚未收录该营业厅电话</string>
    <string name="plz_input_content_submit">请输入内容后再提交问题。</string>
    <string name="mobile_data_error">很抱歉，我已经很努力了，但是还是没有找到%1$s。</string>
    <string name="best_answer">最佳答案:%1$s</string>
    <string name="no_answer_rob_sofa">暂时还没有人回答这个问题，来抢个沙发吧</string>
    <string name="shake_fuzzy">摇一摇，模糊答案</string>
    <string name="more">更多 > ></string>
    <string name="change_next">摇一摇，换一个</string>
    <string name="question_people">提问人：%1$s</string>
    <string name="other_answer">其他答案</string>
    <string name="answer_people">回答人：</string>
    <string name="best_answer2">最佳答案</string>
    <string name="call_china">拨中国大陆(元/分钟)</string>
    <string name="free">免费</string>
    <string name="telephone1">电话：</string>
    <string name="where_country_tell_me">主人，告诉我你想去的国家</string>
    <string name="city_anhui">安徽</string>
    <string name="city_beijing">北京</string>
    <string name="city_sichuan">四川</string>
    <string name="city_anhui_province">安徽省</string>
    <string name="city_beijing_province">北京市</string>
    <string name="city_sichuan_province">四川省</string>
    <string name="get_province_error">获取省份/城市出错，请检查您的网络！</string>
    <string name="your_province">您当前所在的省份/城市是  %1$s</string>
    <string name="get_province_ing">正在后台获取您所在的省份，请稍后&#8230;&#8230;</string>
    <string name="iknow">我知道了</string>
    <string name="business_hall_addr">地址：</string>
    <string name="server_no_data">没有找到 " %1$s " 的数据</string>
    <string name="not_data">暂无</string>
    <string name="sim_card_error">您的SIM卡不正确或不可用，请检查后再执行本操作。</string>
    <string name="query_success">查询成功，请稍后</string>
    <string name="query_fail">查询失败</string>
    <string name="query_ing">正在查询，请稍后</string>
    <string name="international_roaming">国际漫游</string>
    <string name="telephone_charge">话费</string>
    <string name="telephone_balance">余额</string>
    <string name="telephone_integral">积分</string>
    <string name="service_phone_number">客服电话</string>
    <string name="service_online">在线客服</string>
    <string name="roaming_phone_number">漫游电话</string>
    <string name="how_much">多少钱</string>
    <string name="dear_already_find">亲，已找到，请查看</string>
    <string name="destination_address_inaccessible">目的地址不可达</string>
    <string name="say_tang_poetry">"来首唐诗"</string>
    <string name="update_question">修改问题</string>
    <string name="sdcard_error">您的SDCard状态不正常，请检查。</string>
    <string name="telephone_number">电话：%1$s</string>
    <string name="one_more">再来一个</string>
    <string name="plz_choose_sahre_type">请选择分享方式</string>
    <string name="screenshoting_share">正在截图分享,请稍后&#8230;</string>
    <string name="screenshot_share">截图分享</string>
    <string name="screenshot_operation">截图分享</string>
    <string name="how_to_screenshot">请将手掌贴住手机屏幕从左或从右边缘完整滑过手机</string>
    <string name="price_from_low_to_high">价格从低到高</string>
    <string name="price_from_high_to_low">价格从高到低</string>
    <string name="all_series">全部系列</string>
    <string name="no_package_data">很抱歉，暂时没有 %1$s 的数据</string>
    <string name="loading_package_data">正在获取%1$s套餐，请稍后&#8230;</string>
    <string name="loading_mobile_data">正在获取%1$s手机，请稍后&#8230;</string>
    <string name="package_past_due">过期</string>
    <string name="package_ended">已结束</string>
    <string name="home_page">主页</string>
    <string name="close_close">关闭</string>
    <string name="share">分享</string>
    <string name="voice">声音</string>
    <string name="login">登陆</string>
    <string name="remember_password">记住密码</string>
    <string name="quit">退出</string>
    <string name="help">帮助</string>
    <string name="setting">设置</string>
    <string name="upgrade">更新</string>
    <string name="the_latest_issue">最新问题</string>
    <string name="the_hot_issue">最热问题</string>
    <string name="the_highest_reward">最高悬赏</string>
    <string name="not_problem">暂时没有问题</string>
    <string name="my_answer">我的回答</string>
    <string name="my_ask">我的提问</string>
    <string name="iask_message">消息</string>
    <string name="loading_data_ing">正在加载数据&#8230;</string>
    <string name="submit_asking">正在提交问题，请稍后&#8230;</string>
    <string name="check_update">正在检查更新，请稍后&#8230;</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_fail_reson">登陆失败,可能是网络问题或者用户名密码错误</string>
    <string name="login_fail_reson2">服务器返回数据异常,请重新尝试</string>
    <string name="iask_no_login">您还没有登陆，请登录后再操作。</string>
    <string name="plz_input_username">请输入用户名</string>
    <string name="plz_input_password">请输入用密码</string>
    <string name="logining_plz_wait">正在登陆，请稍后</string>
    <string name="wisdom_money_value">智慧币：%1$s</string>
    <string name="user_level_value">级别：%1$s</string>
    <string name="user_title_value">头衔：%1$s</string>
    <string name="user_experience_value">经验值：%1$s</string>
    <string name="me_answer">我来回答</string>
    <string name="cancel_answer">取消回答</string>
    <string name="answer_success">回答成功</string>
    <string name="answer_fail">回答失败</string>
    <string name="plz_input_content">请先输入内容</string>
    <string name="answer_questions">回答问题</string>
    <string name="answer_questions_ing">正在回答问题，轻稍后&#8230;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="must_be_login">您必须先登录后，才能查看个人信息，现在登陆吗？</string>
    <string name="login_can_see_private">请先登录后再查看个人信息</string>
    <string name="input_answer_content">输入回答内容</string>
    <string name="business_hall_no_tel">该营业厅尚未公布电话。</string>
    <string name="submit_answer_success">提交问题成功</string>
    <string name="submit_answer_fail">提交问题失败</string>
    <string name="fuzzy_result">相似问题</string>
    <string name="answer_count">累计解答问题：%1$s 个问题</string>
    <string name="app_version">版本：%1$s</string>
    <string name="app_file_size">大小：%1$s</string>
    <string name="app_os">适用系统：%1$s</string>
    <string name="app_publish_date">推出日期：%1$s</string>
    <string name="compare_xunfei">讯飞联网播报</string>
    <string name="choose_voice_recognition">choose_voice_recognition</string>
    <string name="choose_voice_speech">choose_voice_speech</string>
    <string name="choose_voice_role">choose_voice_role</string>
    <string name="allow_anim">allow_anim</string>
    <string name="my_name">my_name</string>
</resources>