<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/plz_input_username"
        android:nextFocusDown="@+id/password"
        />
    <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/plz_input_password"
        android:inputType="textPassword"
        />
    <CheckBox 
        android:id="@+id/remember_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remember_password"
        android:checked="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        />
    

</LinearLayout>