<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/iask_answer_item_color_normal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >
                <TextView
                    android:id="@+id/iask_the_hot_issue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/iask_tab_hot_pressed"
                    android:gravity="center"
                    android:text="@string/the_hot_issue"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/iask_the_latest_issue"
                    android:layout_width="match_parent"
                	android:layout_height="match_parent"
                	android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/iask_tab_hot_pressed"
                    android:text="@string/the_latest_issue"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/iask_the_highest_reward"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/the_highest_reward"
                    android:background="@drawable/iask_tab_hot_pressed"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

        </LinearLayout>

        <com.ymangu.know.ui.XListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/my_line_img"
            android:cacheColorHint="@android:color/transparent"
            android:fastScrollEnabled="true"
            android:layout_marginTop="-3dp"
            />
			
        <TextView
            android:id="@+id/nodata_tips"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/not_problem"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/progressbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:visibility="gone" 
        >
        <ProgressBar
            android:id="@+id/circle_progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible" 
            />
        
        <TextView
            android:id="@+id/circle_progressbar_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/loading_data_ing"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:visibility="visible" 
            />
    </LinearLayout>

</RelativeLayout>