<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        >
    </android.support.v4.view.ViewPager>
    
    <LinearLayout
        android:id="@+id/sub_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/submenu_bg"
        android:gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone" >
	
        <LinearLayout
            android:id="@+id/setting_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout 
                android:layout_width="@dimen/submenu_btn_bg_width"
            	android:layout_height="@dimen/submenu_btn_bg_height"
                android:orientation="vertical" 
            	android:gravity="center"
                android:background="@drawable/submenu_btn_bg"
                >
                <ImageView
	                android:layout_width="@dimen/submenu_btn_img_width"
	                android:layout_height="@dimen/submenu_btn_img_height"
	                android:src="@drawable/setting_normal"
	                android:textSize="18sp" />
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/setting"
	                android:textColor="@color/white"
	                android:textSize="14sp" />
                
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
             >
            <LinearLayout 
                android:layout_width="@dimen/submenu_btn_bg_width"
            	android:layout_height="@dimen/submenu_btn_bg_height"
                android:orientation="vertical" 
            	android:gravity="center"
                android:background="@drawable/submenu_btn_bg"
                >
					<ImageView
		                android:layout_width="@dimen/submenu_btn_img_width"
		                android:layout_height="@dimen/submenu_btn_img_height"
		                android:layout_gravity="center"
		                android:src="@drawable/logout"
		                />
		            <TextView
		                android:id="@+id/login_text"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:text="@string/login"
		                android:textColor="@color/white"
		                android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >
            
            <LinearLayout 
                android:layout_width="@dimen/submenu_btn_bg_width"
            	android:layout_height="@dimen/submenu_btn_bg_height"
                android:orientation="vertical" 
            	android:gravity="center"
                android:background="@drawable/submenu_btn_bg"
                >
		            <ImageView
		                android:layout_width="@dimen/submenu_btn_img_width"
		                android:layout_height="@dimen/submenu_btn_img_height"
		                android:layout_gravity="center"
		                android:src="@drawable/help"
		                 />
		
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:text="@string/help"
		                android:textColor="@color/white"
		                android:textSize="14sp" />
              </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >
            
            <LinearLayout 
                android:layout_width="@dimen/submenu_btn_bg_width"
            	android:layout_height="@dimen/submenu_btn_bg_height"
                android:orientation="vertical" 
            	android:gravity="center"
                android:background="@drawable/submenu_btn_bg"
                >
		            <ImageView
		                android:layout_width="@dimen/submenu_btn_img_width"
		                android:layout_height="@dimen/submenu_btn_img_height"
		                android:layout_gravity="center"
		                android:src="@drawable/refresh"
		                />
		
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_centerInParent="true"
		                android:layout_gravity="center"
		                android:text="更新"
		                android:textColor="@color/white"
		                android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 布局写在下边的，显示在最上端  -->
    <include 
        layout="@layout/title_bar_layout"
        />
	
</RelativeLayout>
